# codex-cli-sync

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: release-sync.sh
src/codex_cli_sync/: __init__.py  __main__.py  cli.py  config.py  dependencies.py  errors.py  git_ops.py  hook_runner.py  hooks.py  init.py  lockfile.py  logging_setup.py  sync.py  verify.py
tests/: conftest.py  test_cli.py  test_config.py  test_dependencies.py  test_dependency_sync.py  test_deps_cli.py  test_git_ops.py  test_hooks.py  test_init.py  test_sync.py
